created html resume

--- a/index.html
+++ b/index.html
@@ -6,7 +6,62 @@
   <title>Document</title>
 </head>
 <body>
-  <body style="background-color:hotpink;"></body>
+  <body style="background-color:lavenderblush;"></body>
+  <link rel="stylesheet" href="main.css">
   <script src="main.js"></script>
+  <center>
+<article id="one">
+  <h1>Dylan Moore</h1>
+  <h4>615-738-1906<br>
+    dylankmoore@gmail.com
+  </h4>
+</article>
+<br>
+
+<article id="two">
+  <h2>Smith & Lentz</h2>
+  <h3>August 2021 - Present</h3>
+<p>
+  ● Serving guests with a rotating food & beverage menu consisting of different types of beer & wine, and a menu of specialty pizzas and small plates. Knowledge of beer and food, memorization and customer service skills, waiting on both small and large parties, processing payments, clearing and cleaning tables, and performing opening & closing duties.
+</p>
+
+
+</article>
+<br>
+
+<article id="three">
+  <h2>Village Pub</h2>
+  <h3>August 2020 - June 2021</h3>
+  <P>
+    ● Memorized menu changes & specials, interacted with a high volume of customers by taking orders, making recommendations, providing food & drinks in a timely manner, knowledge of beer & spirits, processing payments, handling a large number of tables efficiently, clearing & cleaning tables, performing opening & closing duties.
+  </P>
+</article>
+<br>
+
+<article id="four">
+  <h2>Setsun</h2>
+  <h3>June 2020 - November 2020</h3>
+<p>
+  ● Memorized regularly changing coursed menu of unique food items and natural wine, provided professional & efficient level of customer service with detailed descriptions of menu items, communicated regularly with kitchen staff about course timing, opened and poured bottles of wine for guests, cleared tables & processed payments, set up the dining area before service.
+</p>
+</article>
+<br>
+
+<article id="five">
+  <h2>Sip Cafe</h2>
+  <h3>Sept 2012 - March 2020</h3>
+  <p>
+    ● Responsible for training new employees, delegating tasks to co-workers and ensuring shifts run smoothly, opening/closing the store, counting tips and register drawers, efficiently serving quality French pressed coffee, espresso drinks, pastries, and ice cream inside the cafe & via drive-thru, providing excellent customer service, remembering regular customers and their orders, ensuring consistent quality in drinks, maintaining a clean and organized workspace, multitasking and maintaining focus in a high volume setting.
+  </p>
+</article>
+<br>
+
+<article id="six">
+  <h2>Education</h2>
+  ● Hunters Lane High School <br>
+  ● Nashville State Community College<br>
+  ● Nashville Software School
+</article>
+</center>
 </body>
 </html>
